<resources>
    <string name="app_name">Supercraft3D</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="photo">Photo</string>
    <string name="logintoproceed">Login to proceed</string>
    <string name="password">Password</string>
    <string name="confpassword">Confirm Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confnewpassword">Confirm New Password</string>
    <string name="regno">Registration No</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_signup">Dont\'t have an account? Get Started</string>
    <string name="new_signup_terms">By signing up you agree to our Terms of service.</string>
    <string name="already">Already have an account? Login In</string>
    <string name="approval">Do you realy want to approve this STL File?</string>
    <string name="profile_pic_folder">/Profile/</string>
    <string name="err_Email">Enter valid email</string>
    <string name="err_Name">Enter valid name</string>
    <string name="err_RegNo">Registration cannot be empty</string>
    <string name="err_RegNoLen">Minimum length is 6</string>
    <string name="err_Password">Password cannot be empty</string>
    <string name="err_PasswordLen">Password has be minimum 6 characters</string>
    <string name="err_ConfPass">Confirmation password cannot be empty</string>
    <string name="err_PassConfPassEqual">Passwords do not match</string>
    <string name="fa_notes">&#xf044;</string>
    <string name="fa_approve">&#xf05d;</string>
    <string name="fa_notify">&#xf0f3;</string>
    <string name="fa_3dview">&#xf20e;</string>
    <string name="fa_bell">&#xf0f3;</string>
    <string name="fa_archive">&#xf187;</string>
    <string name="fa_trash">&#xf1f8;</string>
    <string name="fa_trasho">&#xf014;</string>
    <string name="fa_stop">&#xf04d;</string>
    <string name="fa_new">&#xf016;</string>
    <string name="fa_inprogress">&#xf110;</string>
    <string name="fa_completed">&#xf11e;</string>
    <string name="fa_critical">&#xf071;</string>
    <string name="mt_approve">&#xF5E1;</string>
    <string name="mt_approve1">&#xF135;</string>
    <string name="mt_approve2">&#xF4C6;</string>
    <string name="mt_approve3">&#xF5E0;</string>
    <string name="mt_3dview">&#xF175;</string>
    <string name="mt_3dview1">&#xF00A;</string>
    <string name="mt_3dview2">&#xF42B;</string>
    <string name="mt_chat">&#xF181;</string>
    <string name="mt_wechat">&#xF611;</string>
    <string name="mt_notify_chat">&#xF184;</string>
    <string name="mt_details">&#xF2FD;</string>
    <string name="mt_notify">&#xF09A;</string>
    <string name="mt_notes">&#xF3EB;</string>
    <string name="mt_square">&#xF762;</string>
    <string name="mt_square1">&#xF1A2;</string>
    <string name="mt_notes1">&#xF0C9;</string>
    <string name="mt_check">&#xF12C;</string>
    <string name="mt_dcheck">&#xF12D;</string>
    <string name="mt_video">&#xF567;</string>
    <string name="mt_headphones">&#xF2CB;</string>
    <string name="mt_document">&#xF214;</string>
    <string name="mt_circle_check">&#xF133;</string>
    <string name="mt_o_circle_check">&#xF5E1;</string>
    <string name="mt_inprogress">&#xF06A;</string>
    <string name="mt_new">&#xF394;</string>
    <string name="mt_critical1">&#xF46E;</string>
    <string name="mt_critical">&#xF151;</string>
    <string name="fa_icon_areachart">&#xf1fe;</string>
    <string name="fa_icon_piechart">&#xf200;</string>
    <string name="fa_icon_linechart">&#xf201;</string>
    <string name="fa_toggle_off">&#xf204;</string>
    <string name="fa_toggle_on">&#xf205;</string>
    <string name="fa_square_o">&#xf096;</string>
    <string name="fa_check_square_o">&#xf046;</string>
</resources>