<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forgotpasswordlayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    >

    <LinearLayout
        android:id="@+id/login_lyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            >
            <TextView
                android:id="@+id/label_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotpassword"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal|center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/layout_lastName"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                >
                <EditText
                    android:id="@+id/input_email"
                    style="@style/floating_input_text"
                    android:maxLength="40"
                    android:textCursorDrawable="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="20dp"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/forgot_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="Submit"
                android:textColor="#000000"
                android:textAllCaps="false"
                android:background="@drawable/button_background"
                android:layout_gravity="center_horizontal|center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:text="message"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:gravity="center_vertical|center_horizontal"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:text="@string/logintoproceed"
                android:textColor="@android:color/black"
                android:clickable="true"
                android:onClick="onClick"
                android:textSize="16sp"
                android:gravity="center_vertical|center_horizontal"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>