<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    >

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/mytoolbar"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:fillViewport="true"
        >
        <LinearLayout
            android:id="@+id/login_lyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Change Password"
                android:layout_marginTop="75dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="18sp"
                />
            <LinearLayout
                android:id="@+id/layout_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/layout_lastName"
                android:layout_marginTop="30dp"
                >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    >
                    <EditText
                        android:id="@+id/input_old_password"
                        style="@style/floating_input_text"
                        android:maxLength="40"
                        android:textCursorDrawable="@null"
                        android:hint="@string/oldpassword"
                        android:inputType="textPassword"
                        android:drawablePadding="5dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/layout_lastName"
                >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    >
                    <EditText
                        android:id="@+id/input_new_password"
                        style="@style/floating_input_text"
                        android:maxLength="40"
                        android:textCursorDrawable="@null"
                        android:hint="@string/newpassword"
                        android:inputType="textPassword"
                        android:drawablePadding="5dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_conf_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/layout_lastName"
                >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_conf_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    >
                    <EditText
                        android:id="@+id/input_conf_new_password"
                        style="@style/floating_input_text"
                        android:maxLength="40"
                        android:textCursorDrawable="@null"
                        android:hint="@string/confnewpassword"
                        android:inputType="textPassword"
                        android:drawablePadding="5dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                >
                <TextView
                    android:id="@+id/message"
                    android:layout_width="wrap_content"
                    android:layout_height="35sp"
                    android:text="message"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:gravity="center_vertical|center_horizontal"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/update_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:textAllCaps="false"
                android:textColor="#000"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>